# bitcoin-faucet

./: .gitignore  Cargo.toml  README.md  RPC-API.md  deny.toml  docker-compose.yaml  flake.nix
.github/actions/nix-setup/: action.yaml
.github/workflows/: check.yaml  release.yaml
configs/: bitcoind.conf  faucetd.toml
src/: cli.rs  config.rs  main.rs
src/funder/: keyvalue.rs  mod.rs  rpc.rs
src/server/: api.rs  impl.rs  mod.rs
