[package]
name = "bitcoin-faucet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bdk = { version = "0.29.0", default-features = false, features = ["sqlite", "rpc"] }
bitcoin = { version = "0.30.2", default-features = false, features = ["std", "serde"] }
bitcoincore-rpc = { version = "0.17.0", default-features = false }
clap = { version = "4.5.4", default-features = false, features = ["std", "derive"] }
color-eyre = { version = "0.6.3", default-features = false, features = ["capture-spantrace"] }
jsonrpsee = { version = "0.22.5", default-features = false, features = ["server", "macros"] }
jsonrpsee-server = "0.22.5"
miniscript = { version = "10.0.0", default-features = false, features = ["std"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
tower = { version = "0.4.13", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "env-filter"] }
url = { version = "2.5.0", default-features = false }

[dev-dependencies]
serde_json = "1.0.120"
